lib/src/compiler/tests/testdata/errors/92.out
error[E025]: unknown pattern `#a`
 --> line:3:6
  |
3 |      #a == 1
  |      ^^ this pattern is not declared in the `strings` section
  |